Bug 369722: the IEEE_ARM macro should not be defined for ARM EABI.  The patch is contributed by romaxa <romaxa@gmail.com>. r=darin,wtc